--- a/SalesWebMvc/Views/Home/About.cshtml
+++ b/SalesWebMvc/Views/Home/About.cshtml
@@ -1,7 +1,15 @@
 ﻿@{
     ViewData["Title"] = "About";
 }
-<h2>@ViewData["Title"]</h2>
-<h3>@ViewData["Message"]</h3>
+<h2 style="background-color:indianred"><strong>@ViewData["Title"]</strong></h2>
+<h3 style="text-align:center;"><em>@ViewData["Reception"]</em></h3>
 
-<p>Use this area to provide additional information.</p>
+<br/>
+<hr />
+<p>I'm @ViewData["Nome"].</p>
+<p>For any question or doubts, please send me an message.</p>
+<address>
+    <strong>Social medias:</strong>
+    <a href="https://www.linkedin.com/in/mariana-antunes-2a5107191/">My profile on LinkedIn</a>
+</address>
+<hr />
